# rtic_stm32f103c8_rtt_quickstart

./: Cargo.toml  Embed.toml  README.md  cargo-generate.toml  memory.x
src/: main.rs
