[package]
name = "{{crate_name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.6.0-alpha.0"
embedded-hal = "1.0.0-alpha.4"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "rt"]

[dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.1"
features = ["cortex-m"]

# this lets you use `cargo fix`!
[[bin]]
name = "{{crate_name}}"
test = false
bench = false

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
panic = 'abort'
incremental = false
rpath = false
lto = true
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash

[profile.dev]
# use the same configuration for dev and release, as linker gives an error if
# binaries are to large, which happens quickly without optimisations.
opt-level = 3
debug-assertions = false
overflow-checks = false
panic = 'abort'
incremental = false
rpath = false
lto = true
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash



